.provarCaches/00D410000011HE0EAM/objects/rstk__Process_Job__c.object
<CustomObject>
    <description>Process_Job__c : Establish and manage scheduled jobs to run at various hours or frequencies</description>
    <fields>
        <fullName>rstk__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked if this job is active and will be run at the specified times, uncheck to disable this job.</description>
        <inlineHelpText>Checked if this job is active and will be run at the specified times, uncheck to disable this job.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__Additional_Emails_Notified__c</fullName>
        <description>Email Addresses separated by a comma that will be notified when a batch completes. Maximum of 25 addresses allowed.</description>
        <inlineHelpText>Email Addresses separated by a comma that will be notified when a batch completes. Maximum of 25 addresses allowed.</inlineHelpText>
        <label>Additional Emails Notified</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__Apex_Class__c</fullName>
        <description>The actual Apex class name to execute for this job.</description>
        <inlineHelpText>The actual Apex class name to execute for this job.</inlineHelpText>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Batch_Size__c</fullName>
        <defaultValue>25</defaultValue>
        <description>The number of records for each execution of the batch.</description>
        <inlineHelpText>The number of records for each execution of the batch.</inlineHelpText>
        <label>Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Description__c</fullName>
        <description>What does this job do in the system.</description>
        <inlineHelpText>What does this job do in the system.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the core organizational unit. This is typically the plant where the manufacturing is performed, as well as the receipt of purchased material, and fulfillment of sales orders.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Process Jobs</relationshipLabel>
        <relationshipName>Process_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Exception__c</fullName>
        <description>Record problems with this job</description>
        <inlineHelpText>Exception message returned by the system.</inlineHelpText>
        <label>Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Frequency__c</fullName>
        <description>how frequently should this job be scheduled.</description>
        <inlineHelpText>How frequently should this job be scheduled.  The schedule is determined by the preferred run hours, frequency, and interval.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Quarter Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__Interval__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Count of frequency units used to set next run time.</description>
        <inlineHelpText>Count of frequency units used to set next run time.  The schedule is determined by the preferred run hours, frequency, and interval.</inlineHelpText>
        <label>Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Last_Run__c</fullName>
        <inlineHelpText>Date and time this process was last run.</inlineHelpText>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__Max_Records__c</fullName>
        <inlineHelpText>Maximum number of records to be processed at a time.</inlineHelpText>
        <label>Max Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Namespace__c</fullName>
        <description>For external processes that also live within a namespace, allow the job record to specify the namespace to use</description>
        <inlineHelpText>The namespace for the job record to use (for external processes that also exist within a namespace).</inlineHelpText>
        <label>Namespace</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Next_Run__c</fullName>
        <inlineHelpText>The next date and time this process is scheduled to run.</inlineHelpText>
        <label>Next Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__Preferred_Run_Hour__c</fullName>
        <description>Enter the hour(s) of the day to run this job daily: example 8,15  or 8-15</description>
        <inlineHelpText>Enter the hour(s) of the day to run this job daily: example 8,15  or 8-15.  The schedule is determined by the preferred run hours, frequency, and interval.</inlineHelpText>
        <label>Preferred Run Hours</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Process_Job_Next__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The next job to run in this sequence of scheduled jobs</description>
        <inlineHelpText>The next job to run in this sequence of scheduled jobs</inlineHelpText>
        <label>Next Job in Sequence</label>
        <referenceTo>rstk__Process_Job__c</referenceTo>
        <relationshipLabel>Process Jobs</relationshipLabel>
        <relationshipName>Process_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Queueable_Id__c</fullName>
        <inlineHelpText>The Queueable Id of the last run of this process.</inlineHelpText>
        <label>Queueable Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Un_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this job will not execute on any schedule, it must be launched from the Run button or from another job</inlineHelpText>
        <label>Un Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__User_Notified__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that will be notified when the job completes.</description>
        <inlineHelpText>The User that will be notified when the job completes.</inlineHelpText>
        <label>User Notified</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process Job</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__Active__c</columns>
        <columns>rstk__Process_Job_Next__c</columns>
        <columns>rstk__Description__c</columns>
        <columns>rstk__Frequency__c</columns>
        <columns>rstk__Interval__c</columns>
        <columns>rstk__Exception__c</columns>
        <columns>rstk__Preferred_Run_Hour__c</columns>
        <columns>rstk__Last_Run__c</columns>
        <columns>rstk__Next_Run__c</columns>
        <columns>rstk__Division__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Process Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Batch_Size</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__Batch_Size__c &lt; 1 || rstk__Batch_Size__c &gt; 2000</errorConditionFormula>
        <errorDisplayField>rstk__Batch_Size__c</errorDisplayField>
        <errorMessage>You can must choose a batch size between 1 and 2000.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__pref_run_hours</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(rstk__Frequency__c, &quot;Hours&quot;) &amp;&amp;
rstk__Preferred_Run_Hour__c != &quot;&quot; &amp;&amp;
NOT(CONTAINS(rstk__Preferred_Run_Hour__c, &quot;-&quot;)||
CONTAINS(rstk__Preferred_Run_Hour__c, &quot;,&quot;))</errorConditionFormula>
        <errorDisplayField>rstk__Preferred_Run_Hour__c</errorDisplayField>
        <errorMessage>Invalid Frequency and Preferred Run Hour setting.</errorMessage>
    </validationRules>
</CustomObject>